objects/C__c.object
<CustomObject>
    <fields>
        <fullName>B__c</fullName>
        <description>B</description>
        <label>B</label>
        <referenceTo>B__c</referenceTo>
        <relationshipLabel>C</relationshipLabel>
        <relationshipName>C</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D</label>
        <referenceTo>D__c</referenceTo>
        <relationshipLabel>C</relationshipLabel>
        <relationshipName>C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E</label>
        <referenceTo>E__c</referenceTo>
        <relationshipLabel>C</relationshipLabel>
        <relationshipName>C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>time1__c</fullName>
        <label>time1</label>
        <type>Time</type>
    </fields>
</CustomObject>